@@ -1,3 +1,8 @@
+2016-02-14  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>
+
+	* lib/remote.exp (remote_exec): Set global timeout for benefit of
+	<remote>_exec.
+
 2016-02-14  Ben Elliston  <bje@gnu.org>
 
 	* lib/remote.exp (local_exec): Improve comments.
